you'll see two temporary files, they are only there so we can generate some html and css before placing it into the functions

--- a/temporaryHTML.html
+++ b/temporaryHTML.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+
+
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,4 +16,4 @@
     <button class="color-change">REPORTS</button>
    
 </body>
-</html>
+</html>-->
