--- a/temporaryHTML.html
+++ b/temporaryHTML.html
@@ -1,19 +1,16 @@
+<!-- <div class="columns">
+    <div id="leftSideBtn" class="column">
+       <button onMouseDown="mouseDown()" id="deparmentsBtn" class="color-change">DEPARTMENTS</button>
 
+       <button onMouseDown="mouseDown()" id="reportsBtn" class="color-change">REPORTS</button>
+    </div>
+    
+    <div id="rightSideBtn" class="column">
+        <button onMouseDown="mouseDown()" id="reportsBtn" class="color-change">REPORTS</button>
+    </div>
+    
+    <div id="mainContent">
+        ${data}
+    </div>
+</div> -->
 
-<!--<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="temporary.css">
-    <title>Document</title>
-</head>
-<body>
-
-    <button class="color-change">DEPARTMENTS</button>
-
-    <button class="color-change">REPORTS</button>
-   
-</body>
-</html>-->
